Aggiornato il footer con l'anno e aggiunto commento per il deploy

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,8 @@ A Bio-GPT Project—Designed by seiseisette.
 Powered by OpenAI.
 
 
-@seiseisette 
+@seiseisette 2025
+
 
 
 DARK MODE Landing Page
@@ -200,7 +201,7 @@ DARK MODE Landing Page
         </footer>
     </body>
 </html>
-
+<!-- Deploy aggiornato -->
 <!---//
 
 
