Aggiunti margini laterali per il layout desktop in index.html

--- a/Temp__index.html
+++ b/Temp__index.html
@@ -84,6 +84,15 @@ DARK MODE Landing Page
                 padding: var(--spacing);
             }
 
+            /* Margini laterali per Desktop */
+            @media screen and (min-width: 1024px) {
+            main {
+            max-width: 1200px; /* Limita la larghezza del contenuto */
+            padding: 5rem;     /* Mantiene lo spazio interno */
+        m   argin: 0 auto;    /* Centra il contenuto */
+    }
+}
+
             /* Riquadro Informativo */
             .info {
                 box-shadow: var(--box-shadow);
@@ -116,13 +125,22 @@ DARK MODE Landing Page
                Footer
             ============================= */
             footer {
-                width: 100%;
-                padding: var(--spacing);
-                text-align: left;
-                background-color: var(--info-background);
-                color: var(--info-text);
-                margin-top: 1rem;
+            width: 100%;
+            padding: var(--spacing);
+            text-align: left;
+            background-color: var(--info-background);
+            color: var(--info-text);
+            margin-top: 1rem;
             }
+
+            /* Allinea il footer al contenuto come il main */
+            @media screen and (min-width: 1024px) {
+            footer {
+            max-width: 1200px; /* Limita la larghezza */
+            padding: 5rem;     /* Mantiene lo spazio interno */
+            margin: 0 auto;    /* Centra il footer */
+    }
+}
        /* =============================
                links
             ============================= */
