Corretto formato del tag favicon e migliorata la leggibilità del footer in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ DARK MODE Landing Page
         
         <!-- Meta e Titolo + Favicon -->
         <link rel="icon" href="gen-favicon-rd.ico" type="image/x-icon"/>
-        <link rel="shortcut icon" href="gen-favicon-rd.ico" type="image/x-icon"/>
+        <link rel="shortcut icon" href="gen-favicon-rd.ico" type="image/x-icon" />
         <title>GENiALABILE</title>
         
         <!-- Viewport Responsive -->
@@ -215,8 +215,10 @@ DARK MODE Landing Page
 
         <!-- Footer -->
         <footer> <b></b>
-            © 2025 <a href=https://www.genialabile.com. style="font-weight: normal">GENiALABILE</a>.  All Rights Reserved.<br>
-            A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.<br>
+            © 2025 <a href=https://www.genialabile.com. style="font-weight: normal">GENiALABILE</a>.<br> 
+             All Rights Reserved.<br>
+            A Bio-GPT Project —<br>
+            Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.<br>
             --- <br>
             Powered by  <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
             <br><br><br><br><br><br><br>
