Corretto errore di formattazione nel link email in index.html

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ DARK MODE Landing Page
             <h2><a href=https://www.genialabile.com.>GENiALABILE</a></h2>
             <p>
                 run as a beta version in preview access.
-                <a href=mailto:info@genialabile.com>></a>
+                <a href=mailto:info@genialabile.com>></a> <br>
             </p>
 
             <h2> <a href=https://chat.openai.com/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>Is</a></h2>
