Rimosso testo non necessario nel footer di index.html per migliorare la leggibilità

--- a/index.html
+++ b/index.html
@@ -219,8 +219,7 @@ DARK MODE Landing Page
              All Rights Reserved.<br>
              --- <br>
             Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.<br>
-            A Bio-GPT Project. <br>
-            Powered by  <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
+            A Bio-GPT Project. Powered by  <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
             <br><br><br><br><br><br><br>
         </footer>
     </body>
