Aggiornato il file index.html: modificati i link per migliorare la leggibilità e la formattazione

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ DARK MODE Landing Page
             <h2> <a href=https://chat.openai.com/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>Is</a></h2>
             <p>
                 an Advanced Bio-GPT inspiring multidimensional solutions and unlocking creative potential.
-                <a href=https://chat.openai.com/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>></a>
+                <a href=https://chat.openai.com/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>[>]</a>
                 <br>
             </p>
 
@@ -192,7 +192,7 @@ DARK MODE Landing Page
             <h2><a href=https://chat.openai.com/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>Go</a></h2> 
             <p>
                 to empower users with predictive analytics, mentoring, and interactive simulations, unlocking new paths for learning, exploration, and growth.
-                <a href=https://chat.openai.com/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>></a>
+                <a href=https://chat.openai.com/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>[>]</a>
                 <br>
             </p>
 
@@ -201,7 +201,7 @@ DARK MODE Landing Page
             <h2><a href=https://chat.openai.com/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview.>Ultra</a></h2>
             <p>
                 predictive models, multidimensional simulations, emotional insights, and multilingual adaptability. GENiALABILE is built to go beyond limits.
-                <a href=https://chat.openai.com/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview.>></a>
+                <a href=https://chat.openai.com/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview.>[>]</a>
                 <br>
             </p>
 
@@ -210,7 +210,7 @@ DARK MODE Landing Page
             <h2> <a href=https://chat.openai.com/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>Helpful</a></h2>
             <p>
                 in education, research, coaching, therapy, and creative development. GENiALABILE adapts to your needs, turning challenges into solutions. 
-                <a href=https://chat.openai.com/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>></a>
+                <a href=https://chat.openai.com/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>[>]</a>
                 <br>
             </p>
 
@@ -219,7 +219,7 @@ DARK MODE Landing Page
             <h2><a href=https://chat.openai.com/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments.>Tomorrow</a></h2>
             <p>
                 with AR, VR, and immersive simulations like Sora, and augmented reality simulations for new educational and therapeutic experiences.
-                <a href=https://chat.openai.com/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments.>></a>
+                <a href=https://chat.openai.com/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments.>[>]</a>
                 <br>
             </p>
 
@@ -228,7 +228,7 @@ DARK MODE Landing Page
             <h2><a href= https://chat.openai.com/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>Connections</a></h2>
             <p>
                 to building a future where learning and creativity transcend boundaries.
-                <a href= https://chat.openai.com/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>></a>
+                <a href= https://chat.openai.com/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>[>]</a>
                 <br>
             </p>
 
@@ -240,7 +240,7 @@ DARK MODE Landing Page
         <footer> <b></b>
             © 2025 <a href=https://www.genialabile.com. style="font-weight: normal">GENiALABILE</a>.  All Rights Reserved.<br>
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.<br>
-            --- <br>
+    
             Powered by  <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
             <br><br><br><br><br><br><br>
         </footer>
