Aggiornato il file index.html: rimosso un tag <br> nel footer per migliorare la formattazione

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ DARK MODE Landing Page
 
         <!-- Footer -->
         <footer> <b></b>
-            © 2025 <a href=https://www.genialabile.com. style="font-weight: normal">GENiALABILE</a>.  All Rights Reserved.<br>
+            © 2025 <a href=https://www.genialabile.com. style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.<br>
     
             Powered by  <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
