--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ DARK MODE Landing Page
             <h2><a href=https://www.genialabile.com.>GENiALABILE</a></h2>
             <p>
                 run as a beta version in preview access.
-                <a href=mailto:info@genialabile.com>></a>
+                <a href=mailto:info@genialabile.com>[>]</a>
                 <br>
             </p>
 
@@ -238,10 +238,10 @@ DARK MODE Landing Page
 
         <!-- Footer -->
         <footer> <b></b>
-            © 2025 <a href=https://www.genialabile.com. style="font-weight: normal">GENiALABILE</a>. All Rights Reserved.
-            A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.<br>
-    
-            Powered by  <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
+            © 2025 <a href=https://www.genialabile.com. style="font-weight: normal">GENiALABILE</a>.
+            All Rights Reserved.
+            A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
+            Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
             <br><br><br><br><br><br><br>
         </footer>
     </body>
