Aggiornato il file index.html: modificati i tag <h2> in <h1> per migliorare la gerarchia dei titoli

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ DARK MODE Landing Page
         <!-- Contenuto Principale -->
         <main>
             <!-- Sezione Informazioni -->
-            <h2><a href=https://www.genialabile.com.>GENiALABILE</a></h2>
+            <h1><a href=https://www.genialabile.com.>GENiALABILE</a></h1>
             <p>
                 run as a beta version in preview access.
                 <a href=mailto:info@genialabile.com>[>]</a>
@@ -180,7 +180,7 @@ DARK MODE Landing Page
 
 
 
-            <h2> <a href=https://chat.openai.com/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>Is</a></h2>
+            <h1> <a href=https://chat.openai.com/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>Is</a></h1>
             <p>
                 an Advanced Bio-GPT inspiring multidimensional solutions and unlocking creative potential.
                 <a href=https://chat.openai.com/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>[>]</a>
@@ -189,7 +189,7 @@ DARK MODE Landing Page
 
 
 
-            <h2><a href=https://chat.openai.com/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>Go</a></h2> 
+            <h1><a href=https://chat.openai.com/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>Going</a></h1> 
             <p>
                 to empower users with predictive analytics, mentoring, and interactive simulations, unlocking new paths for learning, exploration, and growth.
                 <a href=https://chat.openai.com/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>[>]</a>
@@ -198,7 +198,7 @@ DARK MODE Landing Page
 
 
 
-            <h2><a href=https://chat.openai.com/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview.>Ultra</a></h2>
+            <h1><a href=https://chat.openai.com/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview.>Ultra</a></h1>
             <p>
                 predictive models, multidimensional simulations, emotional insights, and multilingual adaptability. GENiALABILE is built to go beyond limits.
                 <a href=https://chat.openai.com/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview.>[>]</a>
@@ -207,7 +207,7 @@ DARK MODE Landing Page
 
 
 
-            <h2> <a href=https://chat.openai.com/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>Helpful</a></h2>
+            <h1> <a href=https://chat.openai.com/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>Helpful</a></h1>
             <p>
                 in education, research, coaching, therapy, and creative development. GENiALABILE adapts to your needs, turning challenges into solutions. 
                 <a href=https://chat.openai.com/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>[>]</a>
@@ -216,7 +216,7 @@ DARK MODE Landing Page
 
 
 
-            <h2><a href=https://chat.openai.com/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments.>Tomorrow</a></h2>
+            <h1><a href=https://chat.openai.com/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments.>Tomorrow</a></h1>
             <p>
                 with AR, VR, and immersive simulations like Sora, and augmented reality simulations for new educational and therapeutic experiences.
                 <a href=https://chat.openai.com/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments.>[>]</a>
@@ -225,7 +225,7 @@ DARK MODE Landing Page
 
 
 
-            <h2><a href= https://chat.openai.com/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>Connections</a></h2>
+            <h1><a href= https://chat.openai.com/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>Connections</a></h1>
             <p>
                 to building a future where learning and creativity transcend boundaries.
                 <a href= https://chat.openai.com/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>[>]</a>
