Aggiornato il file index.html: modificato il testo del link "Go" in "Become" per maggiore chiarezza

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ DARK MODE Landing Page
 
 
 
-            <h1><a href=https://chat.openai.com/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>Go</a></h1> 
+            <h1><a href=https://chat.openai.com/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>Become</a></h1> 
             <p>
                 to empower users with predictive analytics, mentoring, and interactive simulations, unlocking new paths for learning, exploration, and growth.
                 <a href=https://chat.openai.com/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>[>]</a>
