Aggiornato il file index.html: modificati i link a genialabile.com da HTTPS a HTTP

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ DARK MODE Landing Page
         <!-- Contenuto Principale -->
         <main>
             <!-- Sezione Informazioni -->
-            <h1><a href=https://www.genialabile.com.>GENiALABILE</a></h1>
+            <h1><a href=http://genialabile.com.>GENiALABILE</a></h1>
             <p>
                 run as a beta version in preview access.
                 <a href=mailto:info@genialabile.com>[>]</a>
@@ -238,7 +238,7 @@ DARK MODE Landing Page
 
         <!-- Footer -->
         <footer> <b></b>
-            © 2025 <a href=https://www.genialabile.com. style="font-weight: normal">GENiALABILE</a>.
+            © 2025 <a href=http://genialabile.com. style="font-weight: normal">GENiALABILE</a>.
             All Rights Reserved.
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
             Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
