Aggiornato il file index.html: aggiunti spazi aggiuntivi nel footer per una migliore leggibilità

--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@ DARK MODE Landing Page
 
         <!-- Footer -->
         <footer> <b></b>
-            — AI—Links works only for developers and beta testers. As Invite-Only project request the access here
-            <a href=mailto:info@genialabile.com>[>]</a> — 
-            <br>
+            AI—Links works only for developers and beta testers. As Invite-Only project request the access here
+            <a href=mailto:info@genialabile.com>[>]</a>
+            <br> <br>
             © 2025 <a href=http://genialabile.com. style="font-weight: normal">GENiALABILE</a>.
             All Rights Reserved.
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
