--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ DARK MODE Landing Page
 
         <!-- Footer -->
         <footer> <b></b>
-            AI—Links works only for developers and beta testers. As Invite-Only project request the access here
+            Gen—Links works only for beta testers. As Invite-Only project request the access here
             <a href=mailto:info@genialabile.com>[>]</a>
             <br> <br>
             © 2025 <a href=http://genialabile.com. style="font-weight: normal">GENiALABILE</a>.
