Aggiornato il file index.html: aggiunto messaggio per beta tester e migliorata la leggibilità del footer

--- a/index.html
+++ b/index.html
@@ -231,6 +231,15 @@ DARK MODE Landing Page
                 <a href= https://chat.openai.com/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>[>]</a>
                 <br>
             </p>
+            <br>
+            <br>
+            <br>
+
+            <p>
+                Gen—Links is currently available to beta testers. As an invite-only project, you can request access to the preview version.
+            <a href=mailto:info@genialabile.com>[>]</a>
+            </p>
+           
 
 
 
@@ -238,9 +247,6 @@ DARK MODE Landing Page
 
         <!-- Footer -->
         <footer> <b></b>
-            Gen—Links works only for beta testers. As Invite-Only project request the access here
-            <a href=mailto:info@genialabile.com>[>]</a>
-            <br> <br>
             © 2025 <a href=http://genialabile.com. style="font-weight: normal">GENiALABILE</a>.
             All Rights Reserved.
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
