Aggiornato il file index.html: modificato il messaggio per i beta tester e migliorata la chiarezza delle informazioni nel footer

--- a/index.html
+++ b/index.html
@@ -231,14 +231,7 @@ DARK MODE Landing Page
                 <a href= https://chat.openai.com/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>[>]</a>
                 <br>
             </p>
-            <br>
-            <br>
-            <br>
 
-            <p>
-                Gen—Links is currently available to beta testers. As an invite-only project, you can request access to the preview version.
-            <a href=mailto:info@genialabile.com>[>]</a>
-            </p>
            
 
 
@@ -251,6 +244,8 @@ DARK MODE Landing Page
             All Rights Reserved.
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
             Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
+            If Gen—Links doesn't works, as an invite-only project, you can request access to the preview version.
+            <a href=mailto:info@genialabile.com>[>]</a>
             <br><br><br><br><br><br><br>
         </footer>
     </body>
