Aggiornato il file index.html: corretto il messaggio nel footer per migliorare la chiarezza sull'accesso al progetto invite-only

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ DARK MODE Landing Page
             All Rights Reserved.
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
             Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
-            If Gen—Links doesn't works, as an invite-only project, you can request access to the preview version.
+            If Gen—Links doesn’t work, remember it is an invite-only project. You can request access to the preview version.”
             <a href=mailto:info@genialabile.com>[>]</a>
             <br><br><br><br><br><br><br>
         </footer>
