--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ DARK MODE Landing Page
 
         <!-- Footer -->
         <footer> <b></b>
-            © 2025 <a href=http://genialabile.com. style="font-weight: normal">GENiALABILE</a>.
+            © 2025 <a href=https://genialabile.com. style="font-weight: normal">GENiALABILE</a>.
             All Rights Reserved.
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
             Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
