--- a/index.html
+++ b/index.html
@@ -240,11 +240,11 @@ DARK MODE Landing Page
 
         <!-- Footer -->
         <footer> <b></b>
-            © 2025 <a href=https://genialabile.com. style="font-weight: normal">GENiALABILE</a>.
+            ©2025 <a href=https://genialabile.com. style="font-weight: normal">GENiALABILE</a>.
             All Rights Reserved.
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
             Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
-            If Gen—Links doesn’t work, remember it is an invite-only project. You can request access to the preview version.”
+            <i>If Gen—Links doesn’t work, remember it is an invite-only project. You can request access to the preview version.</i>
             <a href=<a href="mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">[>]</a>
             <br><br><br><br><br><br><br>
         </footer>
