--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ DARK MODE Landing Page
         <!-- Contenuto Principale -->
         <main>
             <!-- Sezione Informazioni -->
-            <h1><a href=http://genialabile.com.>GENiALABILE</a></h1>
+            <h1><a href=https://genialabile.com.>GENiALABILE</a></h1>
             <p>
                 run as a beta version in preview access.
                 <a href="mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">[>]</a>
