--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ DARK MODE Landing Page
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
             Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
             <i>If Gen—Links doesn’t work, remember it is an invite-only project. You can request access to the preview version.</i>
-            <a href=<a href="mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">[>]</a>
+            <a href="mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">[>]</a>
             <br><br><br><br><br><br><br>
         </footer>
     </body>
