Aggiornato il file index.html: migliorata la formattazione dei link e rimosso il contenuto non necessario nel footer

--- a/index.html
+++ b/index.html
@@ -142,19 +142,26 @@ DARK MODE Landing Page
             <h1><a href="https://genialabile.com">GENiALABILE</a></h1>
             <p>
                 Run as a beta version in preview access.
-                <a href="mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">[>]</a>
+                <a href="mailto:info@genialabile.com
+                 ?subject=Request%20for%20Beta%20Access
+                 &body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">[>]</a>
             </p>
 
-            <h1><a href="https://chat.openai.com/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.">Is</a></h1>
+            <h1><a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
+                 /?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.">Is</a></h1>
             <p>
                 An Advanced Bio-GPT inspiring multidimensional solutions and unlocking creative potential.
-                <a href="https://chat.openai.com/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.">[>]</a>
+                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
+                 /?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.">[>]</a>
             </p>
 
-            <h1><a href="https://chat.openai.com/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.">Go</a></h1>
+            <h1><a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
+                 /?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.">Go</a></h1>
             <p>
-                To empower users with predictive analytics, mentoring, and interactive simulations, unlocking new paths for learning, exploration, and growth.
-                <a href="https://chat.openai.com/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.">[>]</a>
+                To empower users with predictive analytics, mentoring, and interactive simulations,
+                 unlocking new paths for learning, exploration, and growth.
+                <a href="https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
+                 /?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.">[>]</a>
             </p>
         </main>
 
@@ -164,8 +171,13 @@ DARK MODE Landing Page
             All Rights Reserved.  
             A Bio-GPT Project—Designed by <a href="https://x.com/seiseisette/" style="font-weight: normal">seiseisette</a>.  
             Powered by <a href="https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
-            <i>If Gen—Links doesn’t work, remember it is an invite-only project. You can request access to the preview version.</i>
-            <a href="mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">[>]</a>
+             <!--
+            <i>If Gen—Links doesn’t work, remember it is an invite-only project.
+                 You can request access to the preview version.</i>
+             <a href="mailto:info@genialabile.com
+             ?subject=Request%20for%20Beta%20Access
+             &body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">[>]</a>
+             -->
         </footer>
     </body>
 </html>
