--- a/index.html
+++ b/index.html
@@ -170,21 +170,17 @@ DARK MODE Landing Page
                 <br>
             </p>
 
-            <h1> <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                 /?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>Is</a></h1>
+            <h1> <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>Is</a></h1>
             <p>
                 an Advanced Bio-GPT inspiring multidimensional solutions and unlocking creative potential.
-                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                 /?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>[>]</a>
+                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>[>]</a>
                 <br>
             </p>
 
-            <h1><a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                 /?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>Go</a></h1> 
+            <h1><a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>Go</a></h1> 
             <p>
                 to empower users with predictive analytics, mentoring, and interactive simulations, unlocking new paths for learning, exploration, and growth.
-                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                 /?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>[>]</a>
+                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>[>]</a>
                 <br>
             </p>
 
@@ -192,17 +188,14 @@ DARK MODE Landing Page
                  /?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview.>Ultra</a></h1>
             <p>
                 predictive models, multidimensional simulations, emotional insights, and multilingual adaptability. GENiALABILE is built to go beyond limits.
-                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                 /?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview.>[>]</a>
+                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview.>[>]</a>
                 <br>
             </p>
 
-            <h1> <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                 /?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>Helpful</a></h1>
+            <h1> <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>Helpful</a></h1>
             <p>
                 in education, research, coaching, therapy, and creative development. GENiALABILE adapts to your needs, turning challenges into solutions. 
-                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                 /?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>[>]</a>
+                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>[>]</a>
                 <br>
             </p>
 
@@ -210,17 +203,14 @@ DARK MODE Landing Page
                 /?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments.>Tomorrow</a></h1>
             <p>
                 with AR, VR, and immersive simulations like Sora, and augmented reality simulations for new educational and therapeutic experiences.
-                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                 /?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments.>[>]</a>
+                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments.>[>]</a>
                 <br>
             </p>
 
-            <h1><a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                 /?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>Connections</a></h1>
+            <h1><a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>Connections</a></h1>
             <p>
                 to building a future where learning and creativity transcend boundaries.
-                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                 /?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>[>]</a>
+                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>[>]</a>
                 <br>
             </p>
 
