--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!---///  
 © 2025 GENiALABILE. All Rights Reserved.  
 A Bio-GPT Project—Designed by seiseisette.    
-
- 2025 Copyright @seiseisette 
 ---
-Licensed under the Apache License, Version 2.0.  
+ 2025 Copyright @seiseisette | x.com/seiseisette
+---
+Licensed under the Apache License, Version 2.0.
 You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0  
 ---
-DARK MODE Landing Page  
+hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page  
 --->
 <!DOCTYPE html>
 <html> 
@@ -166,51 +166,49 @@ DARK MODE Landing Page
             <h1><a href=https://genialabile.com.>GENiALABILE</a></h1>
             <p>
                 run as a beta version in preview access.
-                <a href="mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">[>]</a>
+                <a href= "mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >[>]</a>
                 <br>
             </p>
 
-            <h1> <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>Is</a></h1>
+            <h1> <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description." target="_blank" >Is</a></h1>
             <p>
                 an Advanced Bio-GPT inspiring multidimensional solutions and unlocking creative potential.
-                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description.>[>]</a>
+                <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Who%20is%20GENiALABILE%3F%20Complete%20description." target="_blank" >[>]</a>
                 <br>
             </p>
 
-            <h1><a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>Go</a></h1> 
+            <h1><a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview." target="_blank" >Go</a></h1> 
             <p>
                 to empower users with predictive analytics, mentoring, and interactive simulations, unlocking new paths for learning, exploration, and growth.
-                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview.>[>]</a>
+                <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=What%20is%20GENiALABILE%27s%20mission%3F%20Detailed%20overview." target="_blank" >[>]</a>
                 <br>
             </p>
 
-            <h1><a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                 /?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview.>Ultra</a></h1>
+            <h1><a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview." target="_blank" >Ultra</a></h1>
             <p>
                 predictive models, multidimensional simulations, emotional insights, and multilingual adaptability. GENiALABILE is built to go beyond limits.
-                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview.>[>]</a>
+                <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20features%20-%20Detailed%20list%20and%20overview." target="_blank" >[>]</a>
                 <br>
             </p>
 
-            <h1> <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>Helpful</a></h1>
+            <h1> <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples." target="_blank" >Helpful</a></h1>
             <p>
                 in education, research, coaching, therapy, and creative development. GENiALABILE adapts to your needs, turning challenges into solutions. 
-                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples.>[>]</a>
+                <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples." target="_blank" >[>]</a>
                 <br>
             </p>
 
-            <h1><a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile
-                /?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments.>Tomorrow</a></h1>
+            <h1><a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments." target="_blank">Tomorrow</a></h1>
             <p>
                 with AR, VR, and immersive simulations like Sora, and augmented reality simulations for new educational and therapeutic experiences.
                 <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Future%20vision%20of%20GENiALABILE%20-%20Predictions%20and%20developments.>[>]</a>
                 <br>
             </p>
 
-            <h1><a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>Connections</a></h1>
+            <h1><a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details." target="_blank" >Connections</a></h1>
             <p>
                 to building a future where learning and creativity transcend boundaries.
-                <a href= https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details.>[>]</a>
+                <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=Complete%2Contact%20GENiALABILE%20-%20And%20Social%20Media%20and%20Email%20details." target="_blank">[>]</a>
                 <br>
             </p>
 
@@ -225,7 +223,7 @@ DARK MODE Landing Page
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
             Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
             <i>If Gen—Links doesn’t work, remember it is an invite-only project. You can request access to the preview version.</i>
-            <a href="mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application.">[>]</a>
+            <a href= "mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >[>]</a>
             <br><br><br><br><br><br><br>
         </footer>
     </body>
