--- a/index.html
+++ b/index.html
@@ -238,13 +238,14 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                 <a href= "mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >[>]</a>
             -->
                     <!-- Musts Links -->
-                <p style="font-size: 0.6rem;"> <!-- Font ridotto -->
-                    <a href="/terms-and-conditions.html" style="font-weight: normal; text-decoration: none; color: white;">TERMS</a> | 
-                    <a href="/privacy-policy.html" style="font-weight: normal; text-decoration: none; color: white;">PRIVACY</a> | 
-                    <a href="/cookie-policy.html" style="font-weight: normal; text-decoration: none; color: white;">BISCUITS</a> | 
-                    <a href="/accessibility.html" style="font-weight: normal; text-decoration: none; color: white;">ACCESS</a> | 
-                    <a href="/contact.html" style="font-weight: normal; text-decoration: none; color: white;">CONTACT</a>
-                    <a href="/faq.html" style="font-weight: normal; text-decoration: none; color: white;">FAQ</a>
+                <p style="font-size: 0.6rem;"> <!--slap-->
+                    <br>
+                    <a href="/terms-and-conditions.html" style="font-weight: normal">TERMS</a> | 
+                    <a href="/privacy-policy.html" style="font-weight: normal">PRIVACY</a> | 
+                    <a href="/cookie-policy.html" style="font-weight: normal">COOKIES</a> | 
+                    <a href="/accessibility.html" style="font-weight: normal">ACCESS</a> | 
+                    <a href="/contact.html" style="font-weight: normal">CONTACT</a>
+                    <!-- | <a href="/faq.html" style="font-weight: normal">FAQ</a>  -->
                 </p>
             <br><br><br><br><br><br><br>
         </footer>
