add Terms + Aggiornato il file index.html: modificati i colori dei post e dell'accento per migliorare la visibilità, corretto il link nel footer

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                 --info-background: #000000;
                 --info-text: #f4f4f4;
                 --borders: #f4f4f4;
-                --posts: #242424;
+                --posts: #f4f4f4;
                 --spacing: 3rem;
-                --accent: #242424;
+                --accent: #f4f4f4;
                 --box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
             }
 
@@ -229,7 +229,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 
         <!-- Footer -->
         <footer> <b></b>
-            ©2025 <a href=https://genialabile.com. style="font-weight: normal">GENiALABILE</a>.
+            ©2025 <a href=https://genialabile.com style="font-weight: normal">GENiALABILE</a>.
             All Rights Reserved.
             A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
             Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
