--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
             <!--
                 <i>If Gen—Links doesn’t work, remember it is an invite-only project. You can request access to the preview version.</i>
-                <a href= "mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >[>]</a>
+                <a href= "mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=Hello!%20I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >[>]</a>
             -->
                     <!-- Musts Links -->
                 <p style="font-size: 0.6rem;"> <!--slap-->
                     <br>
-                    <a href="/terms-and-conditions.html" style="font-weight: normal">TERMS</a> | 
+                    <a href="https://genialabile.com/terms-and-conditions.html" style="font-weight: normal">TERMS</a> | 
                     <a href="/privacy-policy.html" style="font-weight: normal">PRIVACY</a> | 
                     <a href="/cookie-policy.html" style="font-weight: normal">COOKIES</a> | 
                     <a href="/accessibility.html" style="font-weight: normal">ACCESS</a> | 
