--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             margin-top: 1rem;
             }
 
-            /* Allinea il footer al contenuto come il main */
+            
             @media screen and (min-width: 1024px) {
             footer {
-            max-width: 1200px; /* Limita la larghezza */
-            padding: 5rem;     /* Mantiene lo spazio interno */
-            margin: 0 auto;    /* Centra il footer */
+            max-width: 1200px; 
+            padding: 5rem;   
+            margin: 0 auto;  
     }
 }
        /* =============================
@@ -176,7 +176,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             <!-- Sezione Informazioni -->
             <h1><a href=https://genialabile.com.>GENiALABILE</a></h1>
             <p>
-                run as a beta version in preview access.
+                running as a beta version in preview access.
                 <a href= "mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >[>]</a>
                 <br>
             </p>
