--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
         <footer> <b></b>
             ©2025 <a href=https://genialabile.com style="font-weight: normal">GENiALABILE</a>.
             All Rights Reserved.
-            A Bio-GPT Project—Designed by <a href= "https://x.com/seiseisette/"  style="font-weight: normal">seiseisette</a>.
+            A Bio-GPT Project—Designed by <a href= "https://github.com/seiseisette"  style="font-weight: normal">seiseisette</a>.
             Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
             <!--
                 <i>If Gen—Links doesn’t work, remember it is an invite-only project. You can request access to the preview version.</i>
