add privacy + Aggiornato il link per la richiesta di accesso beta e modificato il link ai termini e condizioni

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -289,7 +289,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                     <!-- Musts Links -->
                 <p style="font-size: 0.6rem;"> <!--slap-->
                     <br>
-                    <a href="/terms-and-conditions.html" style="font-weight: normal">TERMS</a> | 
+                    <a href="https://genialabile.com/terms-and-conditions.html" style="font-weight: normal">TERMS</a> | 
                     <a href="/privacy-policy.html" style="font-weight: normal">PRIVACY</a> | 
                     <a href="/cookie-policy.html" style="font-weight: normal">COOKIES</a> | 
                     <a href="/accessibility.html" style="font-weight: normal">ACCESS</a> | 
