--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                 <p style="font-size: 0.6rem;"> <!--slap-->
                     <br>
                     <a href="https://genialabile.com/terms-and-conditions.html" style="font-weight: normal">TERMS</a> | 
-                    <a href="/privacy-policy.html" style="font-weight: normal">PRIVACY</a> | 
+                    <a href="https://genialabile.com/privacy-policy.html" style="font-weight: normal">PRIVACY</a> | 
                     <a href="/cookie-policy.html" style="font-weight: normal">COOKIES</a> | 
                     <a href="/accessibility.html" style="font-weight: normal">ACCESS</a> | 
                     <a href="/contact.html" style="font-weight: normal">CONTACT</a>
