Aggiornati i link alla pagina dei cookie e alla pagina di accessibilità nel footer

--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                     <br>
                     <a href="https://genialabile.com/terms-and-conditions.html" style="font-weight: normal">TERMS</a> | 
                     <a href="https://genialabile.com/privacy-policy.html" style="font-weight: normal">PRIVACY</a> | 
-                    <a href="/cookie-policy.html" style="font-weight: normal">COOKIES</a> | 
-                    <a href="/accessibility.html" style="font-weight: normal">ACCESS</a> | 
+                    <a href="https://genialabile.com//cookie-policy.html" style="font-weight: normal">COOKIES</a> | 
+                    <a href="https://genialabile.com//accessibility.html" style="font-weight: normal">ACCESS</a> | 
                     <a href="/contact.html" style="font-weight: normal">CONTACT</a>
                     <!-- | <a href="/faq.html" style="font-weight: normal">FAQ</a>  -->
                 </p>
