Aggiornati i titoli delle pagine per riflettere il contenuto specifico e corretto un errore di battitura nel CSS

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -16,7 +16,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
         <!-- Meta-->
         <link rel="icon" href="gen.fav-new.png" type="image/x-icon" />
         <link rel="shortcut icon" href="gen.fav-new.png" type="image/x-icon" />
-        <title>GENiALABILE</title>
+        <title>GENiALABILE-cookie-policy</title>
 
           <!-- Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
@@ -198,7 +198,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             font-weight: bold; 
         }
 
-        .impportant-p a:hover {
+        .important-p a:hover {
             color: #00ff00; 
             text-decoration: underline; 
         }
