--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             font-weight: bold; 
         }
 
-        .impportant-p a:hover {
+        .important-p a:hover {
             color: #00ff00; 
             text-decoration: underline; 
         }
