Corretto l'indirizzo nella sezione contatti per maggiore precisione.

--- a/contacts.html
+++ b/contacts.html
@@ -358,7 +358,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             <p>
                 GENiALABILE ✧⌝
                 <br>
-                667 Bio-AI Network,
+                667, Multidimensio Ave,
                 <br>
                 GPT's City, API 2025
             </p>
