Corretto il formato dell'indirizzo nella sezione contatti per maggiore chiarezza.

--- a/contacts.html
+++ b/contacts.html
@@ -358,9 +358,9 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             <p>
                 GENiALABILE ✧⌝
                 <br>
-                667, Multidimensio Ave,
+                667 Multidimensio Ave,
                 <br>
-                GPT's City, API 2025
+                GPT's City, API, 2025
             </p>
         </div>
     </div>
