Corretto il link a Threads nella sezione contatti per maggiore precisione.

--- a/contacts.html
+++ b/contacts.html
@@ -322,7 +322,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                 <a href="https://instagram.com/genialabile" style="font-weight: normal;">@genialabile</a>
                 <br><br>
                 Threads:
-                <a href="https://trheads.net/@genialabile" style="font-weight: normal;">@genialabile</a>
+                <a href="https://threads.net/@genialabile" style="font-weight: normal;">@genialabile</a>
                 <br><br>
                 YouTube:
                 <a href="https://youtube.com/@genialabile" style="font-weight: normal;">@genialabile</a>
