--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
                 <br>
             </p>
 
-            <h1> <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples." target="_blank" >Helpful</a></h1>
+            <h1> <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20and%20Bio-Feedback%20Practical%20Applications%20-%20Detailed%20examples." target="_blank" >Helpful</a></h1>
             <p>
                 in education, research, coaching, therapy, and creative development. GENiALABILE adapts to your needs, turning challenges into solutions. 
-                <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20practical%20applications%20-%20Detailed%20examples." target="_blank" >[>]</a>
+                <a href= "https://chat.openai.com/g/g-677e459df9188191ae7d896b2a1db417-genialabile/?prompt=GENiALABILE%20and%20Bio-Feedback%20Practical%20Applications%20-%20Detailed%20examples." target="_blank" >[>]</a>
                 <br>
             </p>
 
