--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -20,7 +20,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-561G4JSCZ2');
+        gtag('config', 'G-7LDVYGZDJ0');
         </script>
 
         <!-- Meta-->
