Corretto il formato dei link nella sezione contatti per maggiore coerenza.

--- a/contacts.html
+++ b/contacts.html
@@ -356,7 +356,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
         <div class="card-text">
             
             <p>
-                GENiALABILE ✧⌝
+                <a href="https://genialabile.com"  style="font-weight: normal;">GENiALABILE</a> ✧⌝
                 <br>
                 667 Multidimensio Ave,
                 <br>
@@ -404,7 +404,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 
         <!-- Footer -->
         <footer> <b></b>
-            ©2025 <a href=https://genialabile.com style="font-weight: normal">GENiALABILE</a>.
+            ©2025 <a href= "https://genialabile.com" style="font-weight: normal">GENiALABILE</a>.
             All Rights Reserved.
             A Bio-GPT Project—Designed by <a href= "https://github.com/seiseisette"  style="font-weight: normal">seiseisette</a>.
             Powered by <a href= "https://openai.com" style="font-weight: normal">OpenAI</a>.<br>
