--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -14,7 +14,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
      <head>
         
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-561G4JSCZ2"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-7LDVYGZDJ0"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
