--- a/contacts.html
+++ b/contacts.html
@@ -22,6 +22,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 
         gtag('config', 'G-7LDVYGZDJ0');
         </script>
+         <!-- Google tag (gtag.js) -->
 
         <!-- Meta-->
         <link rel="icon" href="gen-favicon-rd.ico" type="image/x-icon" />
