Aggiornato il commento per il codice Google tag (gtag.js) con un'ulteriore specifica

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
 
         gtag('config', 'G-7LDVYGZDJ0');
         </script>
-         <!-- Google tag (gtag.js) -->
+         <!-- Google tag (gtag.js) plus check -->
 
         <!-- Meta-->
         <link rel="icon" href="gen-favicon-rd.ico" type="image/x-icon" />
