Aggiornati gli indirizzi email di contatto in diverse pagine HTML

--- a/contacts.html
+++ b/contacts.html
@@ -310,7 +310,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
     <b>2. Email</b>
     <br><br>
         Reach us at: 
-        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request%20For" style="font-weight: normal;">genialabile@gmail.com</a>
+        <a href="mailto:info@genialabile.com?subject=Contact%20Request%20For" style="font-weight: normal;">info@genialabile.com</a>
 
     <br><br><br>
     <b>3. Social Media</b>
