--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -362,7 +362,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             <b>8. Contact</b>
             <br><br>
             If you have any questions or concerns about our use of cookies, please contact us at: 
-            <a href="mailto:genialabile@gmail.com?subject=Privacy%20Policy%20For" style="font-weight: normal;">genialabile@gmail.com</a>
+            <a href="mailto:info@genialabile.com?subject=Privacy%20Policy%20For" style="font-weight: normal;">info@genialabile.com</a>
         </p>
    
 
