--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ hptts://genialabile.com | DARK MODE x Utra-Minimalist Visual Landing Page
             <h1><a href=https://genialabile.com>GENiALABILE</a></h1>
             <p>
                 running as a beta version in preview access.
-                <a href= "mailto:genialabile@gmail.com?subject=Request%20for%20Beta%20Access&body=Hello!%20I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >[>]</a>
+                <a href= "mailto:info@genialabile.com?subject=Request%20for%20Beta%20Access&body=Hello!%20I%20would%20like%20to%20request%20beta%20access%20to%20your%20application." >[>]</a>
                 <br>
             </p>
 
